# data-scientist-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  celerybeat-schedule  dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
agent/: data_utils.py  graph.py  llm.py  schemas.py  state.py  tracing.py
agent/prompts/: final_answer_system.txt  final_answer_user.txt  planner_system.txt  planner_user.txt  reflector_system.txt  reflector_user.txt
alembic/: env.py
alembic/versions/: c76f945de70e_add_users_and_jobs_tables.py  eb0c958914ab_initial_user_job_tables.py  fe4cd1aebe5f_create_users_and_jobs_tables.py
api/: dependencies.py  main.py
api/core/: config.py  database.py  limiter.py  metrics.py  security.py  sync_database.py
api/models/: __init__.py  job.py  user.py
api/routers/: analysis.py  auth.py
api/schemas/: job.py  user.py
api/services/: file_service.py  pii_service.py
deployments/docker-compose/: docker-compose.yml  prometheus.yml
deployments/docker-compose/grafana/dashboards/: agent.json
deployments/docker-compose/prometheus/: agent_alerts.yml
deployments/n8n/workflows/: Full_analysis.json  Get Results.json  Submit Analysis.json  auth.json  login.json  register user.json
docs/: ARCHITECTURE.md  Api.md  Deployment.md  N8N.md  OPERATIONS.md  Security.md  agent.md  performance.md
sandbox/: Dockerfile  requirements.txt  safe_exec.py  server.py
scripts/: debug_agent.py  manual_test_agent_flow.py  prestart.sh  test_alerts.py
tests/: conftest.py
tests/integration/: conftest.py  test_celery_agent.py  test_ci_pipeline.py  test_full_flow.py
tests/load/: analysis_load.js
tests/unit/: test_agent_graph.py  test_analysis.py  test_auth.py  test_executor.py  test_metrics.py  test_perform_analysis.py  test_security.py  test_utils_and_endpoints.py
workers/: beat_tasks.py  celery_app.py  metrics.py  tasks.py
