[project]
name = "data-scientist-agent"
version = "0.1.0"
description = "Industrial-grade LLM-powered data analysis agent"
authors = [
    {name = "Ma_sheikhani",email = "mash473@gmail.com"}
]
license = "MIT"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "loguru (>=0.7.3,<0.8.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==3.2.2)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
testcontainers = {extras = ["postgres", "redis"], version = "^4.0"}
