[project]
name = "data-scientist-agent"
version = "0.1.0"
description = "Industrial-grade LLM-powered data analysis agent"
authors = [
    {name = "Ma_sheikhani",email = "mash473@gmail.com"}
]
license = "MIT"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "loguru (>=0.7.3,<0.8.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==3.2.2)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pandas-stubs (>=3.0.3.260530,<4.0.0.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "langchain-core (>=1.4.9,<2.0.0)",
    "openai (>=2.46.0,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "langfuse (>=4.14.0,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
norecursedirs = ["scripts"]


[tool.poetry.group.dev.dependencies]
testcontainers = {extras = ["postgres", "redis"], version = "^4.0"}

[tool.mypy]
exclude = [
    "alembic/",
    "sandbox",
]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false   # gradually increase this
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "celery.*",
    "asyncpg.*",
    "sqlalchemy.*",
    "pydantic.*",
    "nest_asyncio",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]   # optionally skip assert warnings
